# TestTaskBNN

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_17_1329-0bc28f6d8905_add_sum_model.py
core/database/: __init__.py  models.py  session_manager.py
core/settings/: settings.py
core/web/: __init__.py  core_router.py  models.py
tests/: conftest.py  db_utils.py  test_api.py  test_orm_works.py
tests/migrations/: conftest.py  test_stairway.py
