[tool.poetry]
name = "testtaskbnn"
version = "0.1.0"
description = ""
authors = ["GutesTod <jefflol003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
yarl = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
